test/e2e/testdata/echoserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  labels:
    app.kubernetes.io/name: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echoserver
    spec:
      automountServiceAccountToken: false
      containers:
      - name: echoserver
        image: gcr.io/k8s-staging-ingressconformance/echoserver:v20220815-e21d1a4
        ports:
        - name: http-api
          containerPort: 3000
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app.kubernetes.io/name: echoserver
spec:
  selector:
    app.kubernetes.io/name: echoserver
  ports:
  - name: http
    port: 80
    targetPort: http-api
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver
spec:
  virtualhost:
    fqdn: echoserver.projectcontour.io
  routes:
  - services:
    - name: echoserver
      port: 80
